<resources>
    <string name="app_name">MemeFinder</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="manage_sources">Manage Sources</string>
    <string name="row_listview_item_image_contentdesc">The image-resource to be shown</string>
    <string name="quicksettings_menu_button_contentdesc">Quicksettings menu button</string>
    <string name="add_a_subreddit">Add a subreddit</string>
    <string name="enter_a_subreddit">Enter a subreddit</string>
    <string name="add_subreddit">Add subreddit</string>
    <string name="select_subreddit_to_remove">Select subreddit to remove</string>
    <string name="remove_selected_subreddits">Remove selected subreddit(s)</string>
    <string name="sort_images_by">Sort images by:</string>
    <string name="update_sorting">Update sorting (Reloads feed)</string>
    <string name="logo_of_application_shown_in_loading_screen">Logo of application shown in loading screen</string>
    <string name="meme_finder">Meme Finder\nLoading images…</string>
    <string name="loading_images">Loading images…</string>
    <string name="contextmenu_share">Share</string>
    <string name="contextmenu_save">Save</string>
</resources>
